--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@titaniumnetwork-dev/ultraviolet": "^2.0.0",
     "@tomphttp/bare-server-node": "^2.0.5",
-    "express": "^4.19.2"
+    "@vercel/speed-insights": "^1.1.0",
+    "express": "^4.19.2",
+    "i": "^0.3.7",
+    "npm": "^10.9.1"
   }
 }
